--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libbitcoin0 (2.0.0-1+nmu1) unstable; urgency=low
 
   * libsecp256k1
+  * Missing .h headers
 
  -- Pablo Castellano <pablo@anche.no>  Sun, 22 Jun 2014 00:33:56 +0200
 
