--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libbitcoin0 (2.8.0+nmu1) unstable; urgency=medium
+
+  * New upstream release.
+  * rules: use debhelper.
+  * Change in license of files in debian/ (it's permissive now).
+
+ -- Pablo Castellano <pablo@anche.no>  Sun, 05 Apr 2015 00:45:00 +0200
+
 libbitcoin0 (2.0.0+nmu1) unstable; urgency=low
 
   * Non-maintainer upload.
