--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libbitcoin0 (2.11.0) unstable; urgency=medium
+libbitcoin0 (2.11.0) xenial; urgency=medium
 
   * New upstream release.
   * Remove leveldb dependency.
